@@ -39,7 +39,6 @@
 #ifndef _GLIBCXX_PARALLEL_PARTIAL_SUM_H
 #define _GLIBCXX_PARALLEL_PARTIAL_SUM_H 1
 
-
 #include <omp.h>
 #include <bits/stl_algobase.h>
 #include <parallel/parallel.h>
@@ -104,7 +103,7 @@ namespace __gnu_parallel
 	return parallel_partial_sum_basecase(begin + 1, end, result + 1, bin_op, *begin);
       }
 
-    difference_type borders[num_threads + 2];
+    difference_type* borders = __builtin_alloca(sizeof(difference_type) * (num_threads + 2));
 
     if (Settings::partial_sum_dilatation == 1.0f)
       equally_split(n, num_threads + 1, borders);
