@@ -32,6 +32,8 @@
  *  You should not attempt to use it directly.
  */
 
+#pragma GCC system_header
+
 #if _GLIBCXX_USE_C99_FENV_TR1
 
 #include_next <fenv.h>
