@@ -32,6 +32,8 @@
  *  You should not attempt to use it directly.
  */
 
+#pragma GCC system_header
+
 #if _GLIBCXX_USE_C99_INTTYPES_TR1
 
 // For 8.11.1/1 (see C99, Note 184) 
