@@ -32,6 +32,8 @@
  *  You should not attempt to use it directly.
  */
 
+#pragma GCC system_header
+
 #if _GLIBCXX_USE_C99_STDINT_TR1
 
 // For 8.22.1/1 (see C99, Notes 219, 220, 222) 
